--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -18,16 +18,16 @@ body{
     width: 92%;
     display:table;
     padding:0;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.25);
     padding: 20px 0;
-    
+
     .nav-item{
         position:relative;
         line-height: 1;
         height: $mobile-height;
         display: table-cell;
         vertical-align: middle;
-        color: $gray-lightest;
+        // color: $gray-lightest;
+        color: $white;
         background-color: transparent;
         box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
         transition: all $transition-speed-slow ease-in-out;
@@ -37,7 +37,7 @@ body{
         .icon{
             height: 38px;
         }
-        
+
         &:hover{
             background-color: rgba(255, 255, 255, .1);
             color: $white;
@@ -50,29 +50,29 @@ body{
         }
 
         &.hover{
-        
+
             .popover{
                 opacity: 1;
             }
-        }        
+        }
     }
 }
 
 @include media-tablet{
-    
+
     body{
         padding-top: $tablet-height + 40;
     }
-    
+
     .nav{
 
         .nav-item{
             height: $tablet-height;
-            
+
             .icon{
                 height: 40px;
-            }            
+            }
         }
-    }    
+    }
 }
 
