--- a/src/scss/layouts/_default.scss
+++ b/src/scss/layouts/_default.scss
@@ -36,36 +36,16 @@ img{
     margin-left: auto;
 }
 
-.home-blurb{
-    @include centered(fixed);
-    text-align:center;
-    color: $white;
-    width: 100%;
-    color: $gray-medium;
+.home-bio {
 
-    h1{
-        font-size: 30px;
-        margin: 0 0 $gutter-width-half;
-        color: $gray-lightest;
-        letter-spacing: -1px;
-    }
-
-    h4{
-        margin-bottom: 10px;
-        line-height: $line-height-base;
-    }
-}
-
-.home-bio{
-
-    .img{
+    .img {
         margin: $gutter-width auto $gutter-width-half;
         height: 160px;
         width: 160px;
         box-shadow: 0 2px 2px #4a4a4a;
     }
 
-    .copy{
+    .copy {
         margin: 0;
         padding: $gutter-width $gutter-width-half;
         text-align: center;
@@ -74,9 +54,53 @@ img{
 
 .home-page{
     font-family: $font-family-fancy;
+    color: $white;
+
+    .home-blurb {
+        @include centered(fixed);
+        text-align:center;
+        width: 100%;
+        text-transform: uppercase;
+
+        h1 {
+            text-transform: uppercase;
+            font-size: 66px;
+            font-size: 6.6vw;
+            margin: 0 0 5px;
+            font-weight: 700;
+
+            b {
+                font-size: 80px;
+                font-size: 8vw;
+            }
+        }
+
+        h4 {
+            font-weight: 700;
+            line-height: $line-height-base;
+            font-size: 50px;
+            font-size: 5vw;
+
+            b {
+                font-size: 60px;
+                font-size: 6vw;
+            }
+        }
+    }
+
+    .contact-info {
+        font-weight: 300;
+        text-align:center;
+        width: 100%;
+        text-transform: uppercase;
+        position: absolute;
+        bottom: 0;
+        font-size: 36px;
+        font-size: 3.6vw;
+        margin-bottom: 40px;
+    }
 
     .arrow-down{
-        color: $gray-light;
         position: absolute;
         bottom: 25%;
         height: 30px;
@@ -87,7 +111,7 @@ img{
 
     .technology-grid{
         text-align:center;
-
+        color: $gray-dark;
         .title{
             @extend .shingle;
             font-weight: $font-bold;
@@ -106,29 +130,9 @@ img{
     .home-page{
 
         .arrow-down{
-            // bottom: 50px;
-            // height: 50px;
-            // width: 50px;
-            // margin-left: -25px;
-            // bottom: 60px;
             height: 60px;
             width: 60px;
             margin-left: -30px;
-        }
-    }
-
-    .home-blurb{
-
-        h1{
-            font-size:50px;
-        }
-
-        h4{
-            font-size: $font-size-larger;
-        }
-
-        h6{
-            font-size: $font-size-base;
         }
     }
 }
