--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,4 +30,7 @@
 @import "components/breadcrumbs";
 @import "components/panel-scroller";
 
-
+// ==========================================================================
+// Pages
+// ==========================================================================
+@import "pages/home";
