--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -30,6 +30,8 @@ $tablet-width: 768px;
 $desktop-width: 1024px;
 $gutter-width: 20px;
 $gutter-width-half: $gutter-width / 2;
+$gutter-large: 30px;
+$gutter-huge: 60px;
 
 /*
  * Typography
