--- a/src/scss/components/_panel-scroller.scss
+++ b/src/scss/components/_panel-scroller.scss
@@ -30,7 +30,8 @@
         }
 
         &:last-child {
-            margin-bottom: $mobile-footer-height;
+            // margin-bottom: $mobile-footer-height;
+            margin-bottom: 112px;
         }
 
     }
