--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -52,10 +52,10 @@ $font-bold: 700;
 $font-size-smallest: 11px;
 $font-size-smaller: 13px;
 $font-size-small: 14px;
-$font-size-base: 16px;
-$font-size-large: 18px;
+$font-size-base: 18px;
+$font-size-large: 20px;
 $font-size-larger: 24px;
 $font-size-largest: 36px;
 
-$line-height-base: 1.428571429; // 20/14
+$line-height-base: 1.6;
 $line-height-heading: 1.1;
