--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -56,8 +56,10 @@
         text-transform: uppercase;
         position: absolute;
         bottom: 0;
-        font-size: 36px;
-        font-size: 3.6vw;
+        // font-size: 36px;
+        // font-size: 3.6vw;
+        font-size: 29px;
+        font-size: 2.9vw;
         margin-bottom: 40px;
     }
 
