--- a/src/scss/helpers/_util.scss
+++ b/src/scss/helpers/_util.scss
@@ -32,6 +32,18 @@
     color: $gray-dark;
 }
 
+.bg-white {
+    background-color: $white;
+}
+
+.bg-gray-lightest {
+    background-color: $gray-lightest;
+}
+
+.bg-gray-darker {
+    background-color: $gray-darker;
+}
+
 .font-bold {
     font-weight: $font-bold;
 }
