--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -20,7 +20,9 @@ $gray-darker: #222;
 $transition-speed-fast: 100ms;
 $transition-speed-normal: 300ms;
 $transition-speed-slow: 500ms;
-$mobile-footer-height: 80px;
+// $mobile-footer-height: 80px;
+
+
 
 /*
  * Grid
