--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -14,6 +14,32 @@ body{
     background-color: $gray-darker;
 }
 
+.popover{
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%) translateY(100%);
+    background: rgb(55, 55, 55);;
+    color: $white;
+    font-size: $font-size-smallest;
+    line-height: 1;
+    padding: 5px;
+    border-radius: 5px;
+
+    &:before{
+        display: block;
+        content: '';
+        border: solid 6px transparent;
+        border-bottom-color: rgb(55, 55, 55);;
+        height: 12px;
+        width: 12px;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%) translateY(-100%);
+    }
+}
+
 .nav{
     width: 92%;
     display:table;
@@ -26,13 +52,10 @@ body{
         height: $mobile-height;
         display: table-cell;
         vertical-align: middle;
-        // color: $gray-lightest;
         color: $white;
         background-color: transparent;
         box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
         transition: all $transition-speed-slow ease-in-out;
-
-        //&:first-child{}
 
         .icon{
             height: 38px;
@@ -42,18 +65,15 @@ body{
             background-color: rgba(255, 255, 255, .1);
             color: $white;
             box-shadow: inset 0 0 20px rgba(0, 0, 0, .2);
+
+            .popover{
+                opacity: 1;
+            }
         }
 
         .popover{
             opacity: 0;
             transition: opacity $transition-speed-slow ease-in-out;
-        }
-
-        &.hover{
-
-            .popover{
-                opacity: 1;
-            }
         }
     }
 }
@@ -74,5 +94,9 @@ body{
             }
         }
     }
-}
 
+    .popover{
+        font-size: $font-size-smaller;
+        padding: 8px;
+    }
+}
