--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -9,14 +9,18 @@
 
         h1 {
             text-transform: uppercase;
-            font-size: 66px;
-            font-size: 6.6vw;
+            // font-size: 66px;
+            // font-size: 6.6vw;
+            font-size: 56px;
+            font-size: 5.6vw;
             margin: 0 0 5px;
             font-weight: 700;
 
             b {
-                font-size: 80px;
-                font-size: 8vw;
+                // font-size: 80px;
+                // font-size: 8vw;
+                font-size: 70px;
+                font-size: 7vw;
             }
         }
 
@@ -25,10 +29,14 @@
             line-height: $line-height-base;
             font-size: 50px;
             font-size: 5vw;
+            font-size: 40px;
+            font-size: 4vw;
 
             b {
-                font-size: 60px;
-                font-size: 6vw;
+                // font-size: 60px;
+                // font-size: 6vw;
+                font-size: 50px;
+                font-size: 5vw;
             }
         }
     }
