--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -22,6 +22,10 @@ h6{
     font-family: $font-family-fancy;
     margin:0;
     line-height: $line-height-heading;
+
+    a {
+        color: $gray-dark;
+    }
 }
 
 h1,
@@ -53,6 +57,7 @@ h5,
 .h5{
     font-size: $font-size-small;
     font-weight: $font-normal;
+    margin-bottom: $gutter-width-half;
 }
 
 h6,
@@ -82,14 +87,17 @@ p {
 
 a {
     &,
-    &:hover,
+    // &:hover,
     &:visited{
-        text-decoration:none;
+        text-decoration: none;
     }
 
     &,
     &:visited{
-        // color: $gray-dark;
-        // font-weight: $font-bold;
+        color: $gray-dark;
+    }
+
+    &:hover{
+        text-decoration: underline;
     }
 }
