--- a/src/scss/helpers/_util.scss
+++ b/src/scss/helpers/_util.scss
@@ -55,3 +55,11 @@
 .font-large {
     font-size: $font-size-large;
 }
+
+.bb-gray-dark {
+    border-bottom-color: $gray-dark;
+}
+
+.bb-gray-lightest {
+    border-bottom-color: $gray-lightest;
+}
