Removed unused files.  Disabled all media queries, pending further responsive updates.

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -65,7 +65,7 @@
     }
 }
 
-
+/*
 @include media-tablet-small {
 
     .home-page {
@@ -77,7 +77,4 @@
         }
     }
 }
-
-@include media-tablet {}
-
-@include media-desktop {}
+*/
