--- a/src/scss/components/_panel-scroller.scss
+++ b/src/scss/components/_panel-scroller.scss
@@ -31,14 +31,14 @@
     }
 }
 
+/*
 @include media-tablet{
 
     .panel-scroller{
 
         .panel-heading{
             font-size: 32px;
-            // padding-bottom: 30px;
-            // margin: 0 0 15px;
         }
     }
 }
+*/
