--- a/src/scss/layouts/_default.scss
+++ b/src/scss/layouts/_default.scss
@@ -88,6 +88,7 @@ img{
     }
 }
 
+/*
 @include media-tablet-small{
 
     .container{
@@ -110,3 +111,4 @@ img{
         max-width: $desktop-width;
     }
 }
+*/
