--- a/src/scss/components/_panel-scroller.scss
+++ b/src/scss/components/_panel-scroller.scss
@@ -19,11 +19,12 @@
     }
 
     .panel-heading{
-        padding-bottom: $gutter-large;
+        // padding-bottom: $gutter-large;
+        padding-bottom: $spacer-mobile-large;
         border-bottom-style: solid;
         border-bottom-width: 1px;
-        // border-bottom: solid 1px $gray-lightest;
-        margin: $gutter-huge 0 $gutter-large 0;
+        margin: $spacer-mobile-huge 0 $spacer-mobile-large;
+        // margin: $gutter-huge 0 $gutter-large 0;
 
         &:first-child {
             margin-top: 0;
