--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -25,10 +25,11 @@
         }
 
         h4 {
+            margin:0;
             font-weight: 700;
             line-height: $line-height-base;
-            font-size: 50px;
-            font-size: 5vw;
+            // font-size: 50px;
+            // font-size: 5vw;
             font-size: 40px;
             font-size: 4vw;
 
