--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -41,17 +41,17 @@ body{
 }
 
 .nav{
+    display: flex;
     width: 92%;
-    display:table;
     padding:0;
     padding: 20px 0;
 
     .nav-item{
+        display: flex;
+        align-items: center;
         position:relative;
         line-height: 1;
         height: $mobile-height;
-        display: table-cell;
-        vertical-align: middle;
         color: $white;
         background-color: transparent;
         box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
@@ -78,7 +78,7 @@ body{
     }
 }
 
-/*
+
 @include media-tablet{
 
     body{
@@ -101,4 +101,3 @@ body{
         padding: 8px;
     }
 }
-*/
