--- a/src/scss/components/_panel-scroller.scss
+++ b/src/scss/components/_panel-scroller.scss
@@ -19,12 +19,10 @@
     }
 
     .panel-heading{
-        // padding-bottom: $gutter-large;
         padding-bottom: $spacer-mobile-large;
         border-bottom-style: solid;
         border-bottom-width: 1px;
         margin: $spacer-mobile-huge 0 $spacer-mobile-large;
-        // margin: $gutter-huge 0 $gutter-large 0;
 
         &:first-child {
             margin-top: 0;
@@ -32,14 +30,14 @@
     }
 }
 
-/*
+
 @include media-tablet{
 
     .panel-scroller{
 
         .panel-heading{
-            font-size: 32px;
+            padding-bottom: $spacer-tablet-large;
+            margin: $spacer-tablet-huge 0 $spacer-tablet-large;
         }
     }
 }
-*/
