moved initial screen outside of panel-scroller

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 body{
-    font-family: $font-family-base;
+    font-family: $font-family-fancy;
     font-size: $font-size-base;
     line-height: $line-height-base;
     color: $gray-dark;
