--- a/src/scss/components/_panel-scroller.scss
+++ b/src/scss/components/_panel-scroller.scss
@@ -5,10 +5,9 @@
     .panel{
         position: relative;
         z-index: 10;
-        min-height: 100%;
 
-        &:last-child {
-            min-height: 0;
+        &:first-child {
+            min-height: 100%;
         }
     }
 
