--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,8 +13,40 @@
         <meta name="twitter:image" content="/images/romanwebnet-screenshot.png" />
         <meta name="twitter:image:alt" content="Screen shot of romanwebnet.com" />
         <link rel="shortcut icon" href="/images/favicon.ico" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <style type="text/css">
+        /* latin-ext */
+        @font-face {
+          font-family: 'Lato';
+          font-style: normal;
+          font-weight: 300;
+          src: local('Lato Light'), local('Lato-Light'), url(https://fonts.gstatic.com/s/lato/v14/IY9HZVvI1cMoAHxvl0w9LVKPGs1ZzpMvnHX-7fPOuAc.woff2) format('woff2');
+          unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+        }
+        /* latin */
+        @font-face {
+          font-family: 'Lato';
+          font-style: normal;
+          font-weight: 300;
+          src: local('Lato Light'), local('Lato-Light'), url(https://fonts.gstatic.com/s/lato/v14/22JRxvfANxSmnAhzbFH8PgLUuEpTyoUstqEm5AMlJo4.woff2) format('woff2');
+          unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
+        }
+        /* latin-ext */
+        @font-face {
+          font-family: 'Lato';
+          font-style: normal;
+          font-weight: 700;
+          src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v14/rZPI2gHXi8zxUjnybc2ZQFKPGs1ZzpMvnHX-7fPOuAc.woff2) format('woff2');
+          unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+        }
+        /* latin */
+        @font-face {
+          font-family: 'Lato';
+          font-style: normal;
+          font-weight: 700;
+          src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v14/MgNNr5y1C_tIEuLEmicLmwLUuEpTyoUstqEm5AMlJo4.woff2) format('woff2');
+          unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
+        }
+        </style>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112401659-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
