--- a/src/scss/layouts/_default.scss
+++ b/src/scss/layouts/_default.scss
@@ -7,7 +7,9 @@
 html,
 body{
     height:100%;
-    background-color: $gray-darker;
+    // background-color: $gray-darker;
+    // #afafaa
+    background-color: $new-color;
 }
 
 body{
