--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,7 +11,8 @@ body{
     left: 0;
     right: 0;
     z-index: 20;
-    background-color: $gray-darker;
+    // background-color: $gray-darker;
+    background-color: $new-color;
 }
 
 .popover{
@@ -19,7 +20,7 @@ body{
     bottom: -10px;
     left: 50%;
     transform: translateX(-50%) translateY(100%);
-    background: rgb(55, 55, 55);;
+    background: rgb(55, 55, 55);
     color: $white;
     font-size: $font-size-smallest;
     line-height: 1;
@@ -52,7 +53,7 @@ body{
         position:relative;
         line-height: 1;
         height: $mobile-height;
-        color: $white;
+        // color: $white;
         background-color: transparent;
         box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
         transition: all $transition-speed-slow ease-in-out;
