--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -9,30 +9,31 @@
         text-align:center;
         width: 100%;
         text-transform: uppercase;
-
+        text-shadow: 0px 0px 5px #e8e8e8;    
+    
         h1 {
             text-transform: uppercase;
-            font-size: 56px;
-            font-size: 5.6vw;
+            font-size: 40px;
+            font-size: 4.0vw;
             margin: 0 0 5px;
             font-weight: 700;
 
             b {
-                font-size: 70px;
-                font-size: 7vw;
+                font-size: 60px;
+                font-size: 6vw;
             }
         }
-
+        
         h4 {
             margin:0;
             font-weight: 700;
             line-height: $line-height-base;
-            font-size: 40px;
-            font-size: 4vw;
+            font-size: 24px;
+            font-size: 2.4vw;
 
             b {
-                font-size: 50px;
-                font-size: 5vw;
+                font-size: 40px;
+                font-size: 4vw;
             }
         }
     }
