--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -14,8 +14,7 @@ $gray-medium: #7a7a7a;
 $gray-dark: #383232;
 // $gray-dark: #4A4A4A;
 $gray-darker: #222;
-$new-color: #b1b1ae;
-
+$page-background-color: #f7f5f0;
 
 /*
  * Settings
