--- a/src/scss/layouts/_default.scss
+++ b/src/scss/layouts/_default.scss
@@ -8,8 +8,7 @@ html,
 body{
     height:100%;
     // background-color: $gray-darker;
-    // #afafaa
-    background-color: $new-color;
+    background-color: $page-background-color;
 }
 
 body{
