--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -12,7 +12,7 @@ body{
     right: 0;
     z-index: 20;
     // background-color: $gray-darker;
-    background-color: $new-color;
+    background-color: $page-background-color;
 }
 
 .popover{
