Clean up code.  Remove skrollr.

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,8 +1,9 @@
 .footer {
-    text-align: center;
+  text-align: center;
+  color: $white;
 
-    .back-to-top {
-        margin-top: 4px;
-        display: block;
-    }
+  .back-to-top {
+    margin-top: 4px;
+    display: block;
+  }
 }
