--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,15 +14,6 @@
     <meta name="twitter:image:alt" content="Screen shot of romanwebnet.com" />
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <style type="text/css">
-    /* latin-ext */
-    /* @font-face {
-      font-family: 'Lato';
-      font-style: normal;
-      font-weight: 300;
-      src: local('Lato Light'), local('Lato-Light'), url(https://fonts.gstatic.com/s/lato/v14/IY9HZVvI1cMoAHxvl0w9LVKPGs1ZzpMvnHX-7fPOuAc.woff2) format('woff2');
-      unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-    } */
-    /* latin */
     @font-face {
       font-family: 'Lato';
       font-style: normal;
@@ -30,21 +21,6 @@
       src: local('Lato Light'), local('Lato-Light'), url(https://fonts.gstatic.com/s/lato/v14/22JRxvfANxSmnAhzbFH8PgLUuEpTyoUstqEm5AMlJo4.woff2) format('woff2');
       unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
     }
-    /* latin-ext */
-    /* @font-face {
-      font-family: 'Lato';
-      font-style: normal;
-      font-weight: 700;
-      src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v14/rZPI2gHXi8zxUjnybc2ZQFKPGs1ZzpMvnHX-7fPOuAc.woff2) format('woff2');
-      unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-    } */
-    /* latin */
-    /* @font-face {
-      font-family: 'Lato';
-      font-style: normal;
-      font-weight: 700;
-      src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v14/MgNNr5y1C_tIEuLEmicLmwLUuEpTyoUstqEm5AMlJo4.woff2) format('woff2');
-    } */
     @font-face {
       font-family: 'EB Garamond';
       font-style: normal;
@@ -62,42 +38,43 @@
     </script>
   </head>
   <body>
-    <header id="header" class="header">
-      <nav class="nav container" data-0p="margin-top: 20px;padding: 20px 0;border-bottom-color:rgba(255, 255, 255, 0.25);" data-90p="margin-top: 0;padding: 0 0;border-bottom-color:rgba(255, 255, 255, 0);">
-        <a class="nav-item" href="https://medium.com/@romanwebnet" title="Blog" target="_blank">
-          <svg class="icon" data-0p="height:90%;" data-90p="height:50%;"><use xlink:href="#icon-rss"></use></svg>
-          <span class="popover">Blog</span>
-        </a>
-        <a class="nav-item" href="https://twitter.com/romanwebnet" title="Twitter" target="_blank">
-          <svg class="icon" data-0p="height:90%;" data-90p="height:50%;"><use xlink:href="#icon-twitter"></use></svg>
-          <span class="popover">Twitter</span>
-        </a>
-        <a class="nav-item" href="https://github.com/groman00" title="Github" target="_blank">
-          <svg class="icon" data-0p="height:90%;" data-90p="height:50%;"><use xlink:href="#icon-github"></use></svg>
-          <span class="popover">GitHub</span>
-        </a>
-        <a class="nav-item" href="https://www.linkedin.com/in/gregory-roman-8486485" title="LinkedIn" target="_blank">
-          <svg class="icon" data-0p="height:90%;" data-90p="height:50%;"><use xlink:href="#icon-linkedin"></use></svg>
-          <span class="popover">LinkedIn</span>
-        </a>
-        <a class="nav-item" href="mailto:gregorymichaelroman@gmail.com" title="Email">
-          <svg class="icon" data-0p="height:90%;" data-90p="height:50%;"><use xlink:href="#icon-email"></use></svg>
-          <span class="popover">Email</span>
-        </a>
-      </nav>
-    </header>
-    <div class="home-page">
-      <div class="home-blurb" data-0p="opacity:1;" data-65p="opacity:0;">
-        <h1><b>G</b>regory <b>Roman</b></h1>
-        <h4><b>S</b>oftware <b>E</b>ngineer</h4>
-      </div>
-      <h6 class="contact-info">Jersey City, NJ 07302 | gregorymichaelroman@gmail.com</h6>
-      <div class="arrow-down">
-        <svg class="icon bounce"><use xlink:href="#icon-chevron-down"></use></svg>
-      </div>
-    </div>
     <div class="panel-scroller">
-      <section class="panel"></section>
+      <section class="panel">
+        <!-- <header id="header" class="header"> -->
+        <nav class="nav container">
+          <a class="nav-item" href="https://medium.com/@romanwebnet" title="Blog" target="_blank">
+            <svg class="icon"><use xlink:href="#icon-rss"></use></svg>
+            <!-- <span class="popover">Blog</span> -->
+          </a>
+          <a class="nav-item" href="https://twitter.com/romanwebnet" title="Twitter" target="_blank">
+            <svg class="icon"><use xlink:href="#icon-twitter"></use></svg>
+            <!-- <span class="popover">Twitter</span> -->
+          </a>
+          <a class="nav-item" href="https://github.com/groman00" title="Github" target="_blank">
+            <svg class="icon"><use xlink:href="#icon-github"></use></svg>
+            <!-- <span class="popover">GitHub</span> -->
+          </a>
+          <a class="nav-item" href="https://www.linkedin.com/in/gregory-roman-8486485" title="LinkedIn" target="_blank">
+            <svg class="icon"><use xlink:href="#icon-linkedin"></use></svg>
+            <!-- <span class="popover">LinkedIn</span> -->
+          </a>
+          <a class="nav-item" href="mailto:gregorymichaelroman@gmail.com" title="Email">
+            <svg class="icon"><use xlink:href="#icon-email"></use></svg>
+            <!-- <span class="popover">Email</span> -->
+          </a>
+        </nav>
+        <!-- </header>         -->
+        <div class="home-page">
+          <div class="home-blurb">
+            <h1><b>G</b>regory <b>Roman</b></h1>
+            <h4><b>S</b>oftware <b>E</b>ngineer</h4>
+          </div>
+          <h6 class="contact-info">Jersey City, NJ 07302 | gregorymichaelroman@gmail.com</h6>
+          <div class="arrow-down">
+            <svg class="icon bounce"><use xlink:href="#icon-chevron-down"></use></svg>
+          </div>
+        </div>        
+      </section>
       <section class="panel bg-white">
         <div class="container">
           <h2 class="panel-heading bb-gray-lightest">Background</h2>
@@ -156,13 +133,23 @@
             <div class="list-item">
               <div class="list-item-left">
                 <h4>Newell Brands - Hoboken, NJ</h4>
-                <h5>Technical Lead / Senior UI Developer</h5>
+                <h5>Technical Lead</h5>
                 <p>
-                  Ea dolore est et quis culpa sunt. Irure enim veniam eiusmod aliqua duis consectetur nisi minim adipisicing consectetur excepteur. Ut nostrud exercitation amet adipisicing laborum labore cillum commodo mollit exercitation tempor ad esse.
+                  Team lead for CMS development team, overseeing a distributed team of developers.
                 </p>
               </div>
-              <div class="h5 list-item-right"><i>2014 - present</i></div>
-            </div>            
+              <div class="h5 list-item-right"><i>2019 - present</i></div>
+            </div>    
+            <div class="list-item">
+                <div class="list-item-left">
+                  <h4>Newell Brands - Hoboken, NJ</h4>
+                  <h5>Senior Developer, UI</h5>
+                  <p>
+                    Senior Developer for CMS development team. Contributed foundational code for custom Drupal platform.
+                  </p>
+                </div>
+                <div class="h5 list-item-right"><i>2018 - 2019</i></div>
+              </div>                        
             <div class="list-item">
               <div class="list-item-left">
                 <h4>AOL/Oath - New York, NY</h4>
@@ -253,7 +240,7 @@
       </section>
       <section class="panel bg-gray-darker">
         <footer class="footer container">
-          &copy;2018 Romanwebnet.com. All rights reserved.
+          &copy;2019 Romanwebnet.com. All rights reserved.
           <a class="fg-white back-to-top" href="#" onclick="window.scroll(0, 0);return false;">Back to top</a>
         </footer>
       </section>
