--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,104 +1,104 @@
 $mobile-height: 44px;
 $tablet-height: 80px;
 
-body{
-    padding-top: $mobile-height + 40;
-}
+// body{
+//   padding-top: $mobile-height + 40;
+// }
 
 .header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 20;
-    // background-color: $gray-darker;
-    background-color: $page-background-color;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  // right: 0;
+  // z-index: 20;
+  // background-color: $gray-darker;
+  // background-color: $page-background-color;
 }
 
 .popover{
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%) translateY(100%);
-    background: rgb(55, 55, 55);
-    color: $white;
-    font-size: $font-size-smallest;
-    line-height: 1;
-    padding: 5px;
-    border-radius: 5px;
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%) translateY(100%);
+  background: $gray-dark;
+  color: $white;
+  font-size: $font-size-smallest;
+  line-height: 1;
+  padding: 5px;
+  border-radius: 5px;
 
-    &:before{
-        display: block;
-        content: '';
-        border: solid 6px transparent;
-        border-bottom-color: rgb(55, 55, 55);;
-        height: 12px;
-        width: 12px;
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%) translateY(-100%);
-    }
+  &:before{
+    display: block;
+    content: '';
+    border: solid 6px transparent;
+    border-bottom-color: rgb(55, 55, 55);;
+    height: 12px;
+    width: 12px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-100%);
+  }
 }
 
 .nav{
+  display: flex;
+  // width: 92%;
+  padding: 20px 0;
+
+  .nav-item{
     display: flex;
-    width: 92%;
-    padding:0;
-    padding: 20px 0;
+    align-items: center;
+    position:relative;
+    line-height: 1;
+    height: $mobile-height;
+    color: $gray-dark;
+    background-color: transparent;
+    // box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+    border-radius: 5px;
+    margin: 0 10px;
+    transition: all $transition-speed-slow ease-in-out;
 
-    .nav-item{
-        display: flex;
-        align-items: center;
-        position:relative;
-        line-height: 1;
-        height: $mobile-height;
-        // color: $white;
-        background-color: transparent;
-        box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
-        transition: all $transition-speed-slow ease-in-out;
-
-        .icon{
-            height: 38px;
-        }
-
-        &:hover{
-            background-color: rgba(255, 255, 255, .1);
-            color: $white;
-            box-shadow: inset 0 0 20px rgba(0, 0, 0, .2);
-
-            .popover{
-                opacity: 1;
-            }
-        }
-
-        .popover{
-            opacity: 0;
-            transition: opacity $transition-speed-slow ease-in-out;
-        }
+    .icon{
+      height: 38px;
     }
+
+    &:hover{
+      background-color: $gray-dark;
+      color: $white;
+
+      .popover{
+        opacity: 1;
+      }
+    }
+
+    .popover{
+      opacity: 0;
+      transition: opacity $transition-speed-slow ease-in-out;
+    }
+  }
 }
 
 
 @include media-tablet{
 
-    body{
-        padding-top: $tablet-height + 40;
+  // body {
+  //   padding-top: $tablet-height + 40;
+  // }
+
+  .nav{
+
+    .nav-item{
+      height: $tablet-height;
+
+      .icon{
+        height: 72px;
+      }
     }
+  }
 
-    .nav{
-
-        .nav-item{
-            height: $tablet-height;
-
-            .icon{
-                height: 40px;
-            }
-        }
-    }
-
-    .popover{
-        font-size: $font-size-smaller;
-        padding: 8px;
-    }
+  .popover{
+    font-size: $font-size-smaller;
+    padding: 8px;
+  }
 }
